GAME/logs/build_20260115_131228.log
In file included from game.c:33:
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/System/Library/Frameworks/OpenGL.framework/Headers/gl.h:5:2: warning: gl.h and gl3.h are both included.  Compiler will not invoke errors if using removed OpenGL functionality. [-W#warnings]
    5 | #warning gl.h and gl3.h are both included.  Compiler will not invoke errors if using removed OpenGL functionality.
      |  ^
In file included from game.c:79:
In file included from ./framework/api.h:9:
./framework/api.def:6:14: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
    6 | API_FN(void, draw_circle_filled_opengl, (float centerX, float centerY, float radius, Color color))
      |              ^
      |              int
./framework/api.def:6:86: error: unknown type name 'Color'
    6 | API_FN(void, draw_circle_filled_opengl, (float centerX, float centerY, float radius, Color color))
      |                                                                                      ^
./framework/api.def:6:42: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
    6 | API_FN(void, draw_circle_filled_opengl, (float centerX, float centerY, float radius, Color color))
      |                                          ^
      |                                         int
./framework/api.def:7:1: error: expected function body after function declarator
    7 | API_FN(void, draw_circle_outline_opengl, (float centerX, float centerY, float radius, Color color))
      | ^
In file included from game.c:79:
In file included from ./framework/api.h:14:
./framework/api.def:7:87: error: unknown type name 'Color'
    7 | API_FN(void, draw_circle_outline_opengl, (float centerX, float centerY, float radius, Color color))
      |                                                                                       ^
./framework/api.def:8:37: error: unknown type name 'Vector2'
    8 | API_FN(void, draw_triangle_opengl, (Vector2 v1, Vector2 v2, Vector2 v3, Color color))
      |                                     ^
./framework/api.def:8:49: error: unknown type name 'Vector2'
    8 | API_FN(void, draw_triangle_opengl, (Vector2 v1, Vector2 v2, Vector2 v3, Color color))
      |                                                 ^
./framework/api.def:8:61: error: unknown type name 'Vector2'
    8 | API_FN(void, draw_triangle_opengl, (Vector2 v1, Vector2 v2, Vector2 v3, Color color))
      |                                                             ^
./framework/api.def:8:73: error: unknown type name 'Color'
    8 | API_FN(void, draw_triangle_opengl, (Vector2 v1, Vector2 v2, Vector2 v3, Color color))
      |                                                                         ^
./framework/api.def:9:90: error: unknown type name 'Color'
    9 | API_FN(void, draw_line_opengl, (float x1, float y1, float x2, float y2, float thickness, Color color))
      |                                                                                          ^
./framework/api.def:10:95: error: unknown type name 'Color'
   10 | API_FN(void, draw_ellipse_filled_opengl, (int centerX, int centerY, int radiusX, int radiusY, Color color))
      |                                                                                               ^
./framework/api.def:11:43: error: unknown type name 'Vector2'
   11 | API_FN(void, draw_polygon_filled_opengl, (Vector2 center, int sides, float radius, float rotation, Color color))
      |                                           ^
./framework/api.def:11:100: error: unknown type name 'Color'
   11 | API_FN(void, draw_polygon_filled_opengl, (Vector2 center, int sides, float radius, float rotation, Color color))
      |                                                                                                    ^
./framework/api.def:12:44: error: unknown type name 'Vector2'
   12 | API_FN(void, draw_polygon_outline_opengl, (Vector2 center, int sides, float radius, float rotation, Color color))
      |                                            ^
./framework/api.def:12:101: error: unknown type name 'Color'
   12 | API_FN(void, draw_polygon_outline_opengl, (Vector2 center, int sides, float radius, float rotation, Color color))
      |                                                                                                     ^
./framework/api.def:13:83: error: unknown type name 'Color'
   13 | API_FN(void, draw_rectangle_outline_opengl, (int x, int y, int width, int height, Color color))
      |                                                                                   ^
./framework/api.def:16:27: error: unknown type name 'Vector2'
   16 | API_FN(void, DrawLineEx, (Vector2 startPos, Vector2 endPos, float thick, Color color))
      |                           ^
./framework/api.def:16:45: error: unknown type name 'Vector2'
   16 | API_FN(void, DrawLineEx, (Vector2 startPos, Vector2 endPos, float thick, Color color))
      |                                             ^
./framework/api.def:16:74: error: unknown type name 'Color'
   16 | API_FN(void, DrawLineEx, (Vector2 startPos, Vector2 endPos, float thick, Color color))
      |                                                                          ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
1 warning and 20 errors generated.
../utils/NN/NN/NN.c:967:11: warning: enumeration value 'SCHEDULER_TYPE_COUNT' not handled in switch [-Wswitch]
  967 |   switch (nn->lr_scheduler) {
      |           ^~~~~~~~~~~~~~~~
../utils/NN/NN/NN.c:967:11: note: add missing switch cases
  967 |   switch (nn->lr_scheduler) {
      |           ^
../utils/NN/NN/NN.c:1050:35: warning: format specifies type 'double' but the argument has type 'long double' [-Wformat]
 1050 |   printf("Learning rate: %.6f\n", nn->learningRate);
      |                          ~~~~     ^~~~~~~~~~~~~~~~
      |                          %.6Lf
../utils/NN/NN/NN.c:1051:29: warning: format specifies type 'int' but the argument has type 'OptimizerFunction' (aka 'void (*)(struct NN_t *)') [-Wformat]
 1051 |   printf("Optimizer: %d\n", nn->optimizer);
      |                      ~~     ^~~~~~~~~~~~~
3 warnings generated.
../RL_AGENT/training/training_infrastructure.c:209:13: warning: enumeration value 'CURRICULUM_STAGE_COUNT' not handled in switch [-Wswitch]
  209 |     switch (stage) {
      |             ^~~~~
../RL_AGENT/training/training_infrastructure.c:209:13: note: add missing switch cases
  209 |     switch (stage) {
      |             ^
1 warning generated.
../utils/NN/MUZE/muze_enhanced_model.c:234:49: warning: incompatible pointer types passing 'float *' to parameter of type 'long double *' [-Wincompatible-pointer-types]
  234 |         NN_backprop_custom_delta(model->critic, obs_array, (long double*)critic_loss);
      |                                                 ^~~~~~~~~
../utils/NN/MUZE/../NN/NN.h:231:53: note: passing argument to parameter 'inputs' here
  231 | void NN_backprop_custom_delta(NN_t *nn, long double inputs[],
      |                                                     ^
../utils/NN/MUZE/muze_enhanced_model.c:240:48: warning: incompatible pointer types passing 'float *' to parameter of type 'long double *' [-Wincompatible-pointer-types]
  240 |         NN_backprop_custom_delta(model->actor, obs_array, (long double*)actor_loss);
      |                                                ^~~~~~~~~
../utils/NN/MUZE/../NN/NN.h:231:53: note: passing argument to parameter 'inputs' here
  231 | void NN_backprop_custom_delta(NN_t *nn, long double inputs[],
      |                                                     ^
../utils/NN/MUZE/muze_enhanced_model.c:266:48: warning: incompatible pointer types passing 'float *' to parameter of type 'long double *' [-Wincompatible-pointer-types]
  266 |         latent_ld = NN_forward(model->encoder, obs_array);
      |                                                ^~~~~~~~~
../utils/NN/MUZE/../NN/NN.h:227:47: note: passing argument to parameter 'inputs' here
  227 | long double *NN_forward(NN_t *nn, long double inputs[]);
      |                                               ^
../utils/NN/MUZE/muze_enhanced_model.c:294:54: warning: incompatible pointer types passing 'float *' to parameter of type 'long double *' [-Wincompatible-pointer-types]
  294 |         NN_backprop_custom_delta(model->world_model, obs_array, (long double*)world_loss);
      |                                                      ^~~~~~~~~
../utils/NN/MUZE/../NN/NN.h:231:53: note: passing argument to parameter 'inputs' here
  231 | void NN_backprop_custom_delta(NN_t *nn, long double inputs[],
      |                                                     ^
4 warnings generated.
